--- a/templates/football-seasons.html
+++ b/templates/football-seasons.html
@@ -1,11 +1,11 @@
 
 <link rel="stylesheet" href="/static/style.css">
 
-<h1> Michigan Men's Basketball </h1>
+<h1> Michigan Football </h1>
 
 
 
-<form action="/bball" method="POST">
+<form action="/fball" method="POST">
     Sort By:<br/>
     <input type="radio" name="sortby" value="year"/> Year <br/>
     <input type="radio" name="sortby" value="wins"/> Wins <br/>
@@ -20,12 +20,12 @@
     <br/>
 </form>
 
-
 <table border=1>
     <tr>
         <th>Year</th>
         <th>Wins</th>
         <th>Losses</th>
+        <th>Ties</th>
         <th>Win %</th>
     </tr>
 {% for s in seasons %}
@@ -34,6 +34,7 @@
         <td>{{s[3]}}</td>
         <td>{{s[4]}}</td>
         <td>{{s[5]}}</td>
+        <td>{{s[6]}}</td>
     </tr>
 {% endfor %}
 </table>
